[metadata]
name = Conolist
version = 0.9
url = https://github.com/E-RROR/conolist
author = Sina Farhadi
author_email = sina.farhadi.cyber@gmail.com
description = Work with paths with extra tools from command line interface simple.
long_description = file: README.md
license = MIT
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3
packages = conolist
scripts = conolist/conolist.py
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    conolist = conolist:execute_from_command_line

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = conolist
line_length = 79
multi_line_output = 5